--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
       <img src="images/banner.svg" alt="banner image">
     </header>
 
-    <h2>自然の親密な本質を模倣し、人生の真の意味を発見する。</h2>
-    <p>Imitate the intimate essence of nature & discover the true meaning of life.</p>
+    <div>
+      <h2>自然の親密な本質を模倣し、人生の真の意味を発見する。</h2>
+      <p>Imitate the intimate essence of nature & discover the true meaning of life.</p>
+    </div>
 
   <div>
     <img src="images/viewing.svg" alt="#">
