--- a/index.html
+++ b/index.html
@@ -4,55 +4,56 @@
   <meta charset="utf-8">
   <title>Rock Gardens</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link href="css/main.css" rel="stylesheet">
+  <link href="css/modules.css" rel="stylesheet">
   <link href="css/grid.css" rel="stylesheet">
-  <link href="css/modu.css" rel="stylesheet">
   <link href="css/type.css" rel="stylesheet">
+  <link href="css/main.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/earlyaccess/notosansjapanese.css" rel="stylesheet">
 </head>
 <body>
-  <main>
-    <header>
-      <h1>枯山水<br>Rock Gardens</h1>
-      <nav>
-        <ul>
-          <li><a href="#">Viewing</a></li>
-          <li><a href="#">Gravel</a></li>
-          <li><a href="#">Symbolism</a></li>
+  <main role="main">
+    <header role="banner">
+      <h1><i class="not-italic" lang="ja">枯山水</i><br>Rock Gardens</h1>
+      <nav role="navigation">
+        <ul class="list-group-inline">
+          <li><a class="btn" href="#">Viewing</a></li>
+          <li><a class="btn" href="#">Gravel</a></li>
+          <li><a class="btn" href="#">Symbolism</a></li>
         </ul>
       </nav>
       <img src="images/banner.svg" alt="banner image">
     </header>
 
     <div>
-      <h2>自然の親密な本質を模倣し、人生の真の意味を発見する。</h2>
+      <h2><i class="not-italic" lang="ja">自然の親密な本質を模倣し、人生の真の意味を発見する。</i></h2>
       <p>Imitate the intimate essence of nature & discover the true meaning of life.</p>
     </div>
 
-  <div>
-    <img src="images/viewing.svg" alt="#">
-    <h2>閲覧<br>Viewing</h2>
-    <p>A zen garden is usually relatively small, surrounded by a wall, and is often meant to be seen while seated from a single viewpoint outside the garden, such as the porch of the hojo</p>
-    <a href="#">Learn more about Viewing</a>
-  </div>
+    <div class="grid">
+      <div class="unit xs-1 s-1 m-1-2 l-1-3">
+        <img src="images/viewing.svg" alt="#">
+        <h2><i class="not-italic" lang="ja">閲覧</i><br>Viewing</h2>
+        <p>A zen garden is usually relatively small, surrounded by a wall, and is often meant to be seen while seated from a single viewpoint outside the garden, such as the porch of the hojo</p>
+        <a class="btn" href="#">Learn more about Viewing</a>
+      </div>
 
-  <div>
-    <img src="images/gravel.svg" alt="#">
-    <h2>砂利<br>Gravel</h2>
-    <p>Gravel is usually used in zen gardens because it is less disturbed by rain and wind; Shirakawa, which is a black-speckled granite from Kyoto, was prized for its ability to hold grooves</p>
-    <a href="#">Learn more about Gravel</a>
-  </div>
+      <div class="unit xs-1 s-1 m-1-2 l-1-3">
+        <img src="images/gravel.svg" alt="#">
+        <h2><i class="not-italic" lang="ja">砂利</i><br>Gravel</h2>
+        <p>Gravel is usually used in zen gardens because it is less disturbed by rain and wind; Shirakawa, which is a black-speckled granite from Kyoto, was prized for its ability to hold grooves</p>
+        <a class="btn" href="#">Learn more about Gravel</a>
+      </div>
 
-  <div>
-    <img src="images/symbolism.svg" alt="#">
-    <h2>象徴主義<br>Symbolism</h2>
-    <p>In the Japanese rock garden, rocks sometimes symbolize mountains (particularly Horai or they can be boats or a living creature, usually a turtle, or a carp</p>
-    <a href="#">Learn more about Symbolism</a>
-  </div>
-
-  <footer>
-    <p><small>© 794 Heian Period</small></p>
-  </footer>
+      <div class="unit xs-1 s-1 m-1 l-1-3">
+        <img src="images/symbolism.svg" alt="#">
+        <h2><i class="not-italic" lang="ja">象徴主義</i><br>Symbolism</h2>
+        <p>In the Japanese rock garden, rocks sometimes symbolize mountains (particularly Horai or they can be boats or a living creature, usually a turtle, or a carp</p>
+        <a class="btn" href="#">Learn more about Symbolism</a>
+      </div>
+    </div>
+    <footer>
+      <p role="contentinfo"><small>© 794 Heian Period</small></p>
+    </footer>
 
   </main>
 </body>
