--- a/index.html
+++ b/index.html
@@ -12,16 +12,22 @@
 </head>
 <body>
   <main role="main">
-    <header role="banner">
-      <h1><i class="not-italic" lang="ja">枯山水</i><br>Rock Gardens</h1>
-      <nav role="navigation">
-        <ul class="list-group-inline">
-          <li><a class="btn" href="#">Viewing</a></li>
-          <li><a class="btn" href="#">Gravel</a></li>
-          <li><a class="btn" href="#">Symbolism</a></li>
-        </ul>
-      </nav>
-      <img src="images/banner.svg" alt="banner image">
+    <header class="grid" role="banner">
+      <div class="unit xs-1 s-1 m-1 l-1-2">
+        <h1><i class="not-italic" lang="ja">枯山水</i><br>Rock Gardens</h1>
+      </div>
+      <div class="unit xs-1 s-1 m-1 l-1-2">
+        <nav role="navigation">
+          <ul class="list-group-inline">
+            <li><a class="btn" href="#">Viewing</a></li>
+            <li><a class="btn" href="#">Gravel</a></li>
+            <li><a class="btn" href="#">Symbolism</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div class="embed embed-3by1">
+        <img class="embed-item" src="images/banner.svg" alt="banner image">
+      </div>
     </header>
 
     <div>
