--- a/index.html
+++ b/index.html
@@ -9,56 +9,76 @@
   <link href="css/type.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/earlyaccess/notosansjapanese.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,400i,700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <main role="main">
-    <header class="grid" role="banner">
-      <div class="unit xs-1 s-1 m-1 l-1-2">
-        <h1><i class="not-italic" lang="ja">枯山水</i><br>Rock Gardens</h1>
-      </div>
-      <div class="unit xs-1 s-1 m-1 l-1-2">
-        <nav role="navigation">
-          <ul class="list-group-inline">
-            <li><a class="btn" href="#">Viewing</a></li>
-            <li><a class="btn" href="#">Gravel</a></li>
-            <li><a class="btn" href="#">Symbolism</a></li>
+  <ul class="skip-links">
+    <li><a href="#nav">skip link to navigation</a></li>
+    <li><a href="#main">skip link to main content</a></li>
+  </ul>
+  <main id="main" role="main">
+    <header role="banner">
+      <div class="grid">
+        <div class="unit xs-1 s-1 m-1 l-1-2">
+          <h1><i class="not-italic" lang="ja">枯山水</i><br>Rock Gardens</h1>
+        </div>
+        <nav id="nav" role="navigation" class="unit xs-1 s-1 m-1 l-1-2">
+          <ul class="nav list-group-inline">
+            <li class="gutter-1-4"><a class="" href="#">Viewing</a></li>
+            <li class="gutter-1-4"><a class="" href="#">Gravel</a></li>
+            <li class="gutter-1-4"><a class="" href="#">Symbolism</a></li>
           </ul>
         </nav>
       </div>
-      <div class="embed embed-3by1">
+      <div class="embed embed-3by1 unit xs-1 s-1 m-1 l-1">
         <img class="embed-item" src="images/banner.svg" alt="banner image">
       </div>
     </header>
 
-    <div>
+    <section>
+      <hr>
       <h2><i class="not-italic" lang="ja">自然の親密な本質を模倣し、人生の真の意味を発見する。</i></h2>
       <p>Imitate the intimate essence of nature & discover the true meaning of life.</p>
-    </div>
+      <hr>
+    </section>
 
     <div class="grid">
       <div class="unit xs-1 s-1 m-1-2 l-1-3">
-        <img src="images/viewing.svg" alt="#">
+        <div class="embed embed-3by2">
+          <img class="embed-item" src="images/viewing.svg" alt="#">
+        </div>
         <h2><i class="not-italic" lang="ja">閲覧</i><br>Viewing</h2>
         <p>A zen garden is usually relatively small, surrounded by a wall, and is often meant to be seen while seated from a single viewpoint outside the garden, such as the porch of the hojo</p>
         <a class="btn" href="#">Learn more about Viewing</a>
       </div>
 
       <div class="unit xs-1 s-1 m-1-2 l-1-3">
-        <img src="images/gravel.svg" alt="#">
+        <div class="embed embed-3by2">
+          <img class="embed-item" src="images/gravel.svg" alt="#">
+        </div>
         <h2><i class="not-italic" lang="ja">砂利</i><br>Gravel</h2>
         <p>Gravel is usually used in zen gardens because it is less disturbed by rain and wind; Shirakawa, which is a black-speckled granite from Kyoto, was prized for its ability to hold grooves</p>
         <a class="btn" href="#">Learn more about Gravel</a>
       </div>
 
       <div class="unit xs-1 s-1 m-1 l-1-3">
-        <img src="images/symbolism.svg" alt="#">
-        <h2><i class="not-italic" lang="ja">象徴主義</i><br>Symbolism</h2>
-        <p>In the Japanese rock garden, rocks sometimes symbolize mountains (particularly Horai or they can be boats or a living creature, usually a turtle, or a carp</p>
-        <a class="btn" href="#">Learn more about Symbolism</a>
+        <div class="grid">
+          <div class="unit xs-1 s-1 m-1-2 l-1">
+            <div class="embed embed-3by2">
+              <img class="embed-item" src="images/symbolism.svg" alt="#">
+            </div>
+          </div>
+          <div class="unit xs-1 s-1 m-1-2 l-1">
+            <h2><i class="not-italic" lang="ja">象徴主義</i><br>Symbolism</h2>
+            <p>In the Japanese rock garden, rocks sometimes symbolize mountains (particularly Horai or they can be boats or a living creature, usually a turtle, or a carp</p>
+            <a class="btn" href="#">Learn more about Symbolism</a>
+          </div>
+        </div>
       </div>
     </div>
     <footer>
-      <p role="contentinfo"><small>© 794 Heian Period</small></p>
+      <hr>
+      <p><small>© 794 Heian Period</small></p>
     </footer>
 
   </main>
